--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
     "axios": "^1.1.3",
+    "html-to-image": "^1.11.11",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
